--- a/package.json
+++ b/package.json
@@ -20,17 +20,16 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
-    "primeicons": "^7.0.0",
+    "http-proxy-middleware": "^3.0.3",
+    "ngx-mask": "^15.0.0",
     "primeng": "^17.18.11",
+    "rollup": "^4.24.4",
     "rxjs": "~7.8.0",
-    "three": "^0.169.0",
-    "three-orbitcontrols-ts": "^0.1.2",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.10",
-    "ngx-mask": "^15.0.0"
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.0",
+    "@angular-devkit/build-angular": "^18.2.11",
     "@angular/cli": "^18.2.0",
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
@@ -41,7 +40,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.5.2"
+    "typescript": "^5.5.4"
   },
   "engines": {
     "node": "20.x"
